[package]
name = "gas_fee_estimator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.88"
axum = "0.8.3"
ethereum = {version = "0.15.0", features = ["std", "serde", "with-serde"]}
log = "0.4.27"
primitive-types = {version = "0.12.2", features=["serde", "impl-serde"]}
serde = {version = "1.0.219", features=["derive"]}
simple_logger = "5.0.0"
thiserror = "2.0.12"
tokio = {version = "1.44.1", features = ["full"]}
tokio-util = "0.7.14"
ctrlc = { version = "3.4.5", features=["termination"] }
lazy_static = "1.5.0"
tower-http = {version = "0.6.2", features = ["timeout"]}
evm-gasometer = "0.42.0"
evm-runtime = "0.42.0"
evm-disassembler = "0.5.0"
eyre = "0.6.12"
hex = "0.4.3"
alloy = { version = "0.13.0", features = ["full"] }
url = "2.5.4"
clap = { version = "4.5.35", features = ["derive", "env", "string"] }
